# Mobile-Manipulator-Robot

./: README.md
install/: local_setup.sh  setup.sh
install/actions_py/share/actions_py/: package.sh
install/fpga-interface/share/fpga-interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_custom_pkg/lib/my_custom_pkg/: composition.py  cpp_exe
install/my_custom_pkg/share/my_custom_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/actions_py/: package.xml  setup.py
src/actions_py/actions_py/: count_until_server.py
src/fpga-interface/: CMakeLists.txt  package.xml
src/fpga-interface/launch/: fpga_launch.py
src/fpga-interface/scripts/: fpga_interface_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_custom_pkg/: CMakeLists.txt  package.xml
src/my_custom_pkg/include/my_custom_pkg/: cpp_header.hpp
src/my_custom_pkg/scripts/: lifecycle_test.py  py_node.py
src/my_custom_pkg/src/: component_test.cpp  cpp_node.cpp
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: demo.launch.xml  include_tutorial.launch.py  include_tutorial.launch.xml
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_control/src/: params_callback.cpp
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/my_robot_controller/: my_first_node.py
src/my_robot_interfaces/: CMakeLists.txt
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: base_gazebo_control_xacro.launch.py  base_gazebo_control_xacro.launch.xml
src/tutorials_py/: package.xml  setup.cfg  setup.py
(+43 files in other folders)
